AtlasOfLivingAustralia/DataQuality#162 Update for grouped inverse filter service
